<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/ic_today"
        android:title="@string/today" />

    <item
        android:id="@+id/navigation_yesterday"
        android:icon="@drawable/ic_yesterday"
        android:title="@string/yesterday" />

    <item
        android:id="@+id/navigation_week"
        android:icon="@drawable/ic_week"
        android:title="@string/week" />

    <item
        android:id="@+id/navigation_month"
        android:icon="@drawable/ic_month"
        android:title="@string/choose_month" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_day"
        android:title="@string/choose_day" />

</menu>