<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/display_month_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no" />

    <TextView
        android:id="@+id/imerominia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempe" />

    <TextView
        android:id="@+id/humd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humd" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight" />

</LinearLayout>