<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TableLayout
        android:layout_width="357dp"
        android:layout_height="413dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/about_me_text"
                android:layout_width="171dp"
                android:layout_height="121dp"
                android:gravity="center"
                android:text="@string/about_me" />

            <ImageView
                android:id="@+id/about_me_image"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/about_me"
                app:srcCompat="@drawable/db_user_icon_foreground"
                tools:srcCompat="@drawable/db_user_icon_foreground" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/about_app"
                android:layout_width="148dp"
                android:layout_height="122dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/app_icon"
                tools:srcCompat="@mipmap/bees_foreground_foreground" />

            <TextView
                android:id="@+id/me"
                android:layout_width="181dp"
                android:layout_height="116dp"
                android:gravity="center"
                android:text="@string/about_app"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/email"
                android:layout_width="181dp"
                android:layout_height="116dp"
                android:gravity="center"
                android:text="@string/email" />

            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="149dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/contact_me"
                app:srcCompat="@drawable/phone_foreground"
                tools:srcCompat="@drawable/phone_foreground" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>