<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.today.FragmentToday"
        android:keepScreenOn="true">

    <TextView
        android:id="@+id/today_date_frag_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_today_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_today"
        android:layout_width="322dp"
        android:layout_height="331dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_date_frag_id">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progressBart"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                    android:layout_width="143dp"
                    android:layout_height="94dp"
                    android:layout_weight="1"
                    android:max="40"
                    android:progress="23" />

                <LinearLayout
                    android:layout_width="242dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/temp_text_id"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/temp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/texttemp"
                        android:layout_width="181dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="30sp" />
                </LinearLayout>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progressBarh"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="143dp"
                    android:layout_height="94dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="23" />

                <LinearLayout
                    android:layout_width="242dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hum_text_id"
                        android:layout_width="181dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:password="false"
                        android:text="@string/hum"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_hum"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="30sp" />
                </LinearLayout>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="368dp"
            android:layout_height="117dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progressBarw"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="143dp"
                    android:layout_height="94dp"
                    android:layout_weight="1"
                    android:max="200"
                    android:progress="23" />

                <LinearLayout
                    android:layout_width="242dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/wei_text_id"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:password="false"
                        android:text="@string/wei"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_wei"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="30sp" />
                </LinearLayout>

            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/today_text_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/empty_string_today"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_date_frag_id"
        app:layout_constraintVertical_bias="0.041" />
</androidx.constraintlayout.widget.ConstraintLayout>